--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-h1. Mohiva Manitou "!http://travis-ci.org/mohiva/manitou.png!":http://travis-ci.org/mohiva/manitou
+h1. Mohiva Manitou "!https://travis-ci.org/mohiva/manitou.png!":https://travis-ci.org/mohiva/manitou
 
 The Mohiva Manitou project is code generator written in PHP. In it's early state it can only generate PHP code. In
 feature versions it should be able to generate code for other languages too. Therefore it is planed to feature code
